# three.py-packaged

./: LICENSE  MANIFEST.in  README.md  setup.cfg
three/: Mandlebrot.py  TestAnimatedDayNight.py  TestAnimatedTextures.py  TestCustomMaterials.py  TestDirectionalLight.py  TestExtrusion.py  TestFirstPersonControls.py  TestHierarchy.py  TestLineCurveGeometry.py  TestParticleEngine.py  TestShadows.py  TestSurfaceGeometry.py  TestTextImage.py  TestUpdatingTexture.py
three/cameras/: Camera.py  PerspectiveCamera.py  ShadowCamera.py  __init__.py
three/components/: Plane.py  Shape.py  Sphere.py  __init__.py
three/core/: FirstPersonController.py  Mesh.py  Object3D.py  __init__.py
three/geometry/: BoxGeometry.py  CylinderGeometry.py  IcosahedronGeometry.py  PointGeometry.py  PyramidGeometry.py  QuadGeometry.py  SphereGeometry.py  TorusGeometry.py  TubeGeometry.py
three/helpers/: AxesHelper.py  BoxHelper.py  DirectionalLightHelper.py  OrthographicCameraHelper.py  PointLightHelper.py
three/lights/: AmbientLight.py  DirectionalLight.py  PointLight.py
three/material/: LineBasicMaterial.py  SpriteMaterial.py  SurfaceBasicMaterial.py  SurfaceLightMaterial.py
three/mathutils/: CurveFactory.py  Multicurve.py  __init__.py
three/physics/: __init__.py
three_py_packaged.egg-info/: PKG-INFO  SOURCES.txt
