[metadata]
name = three-py-packaged
version = 0.0.6
description = installable version of stemkoski/three.py
author = Jonathan Piland
author_email = jpiland16@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/jpiland16/three.py-packaged
project_urls =
    Bug Tracker = https://github.com/jpiland16/three.py-packaged/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data=True

pyopengl = "*"
pygame = "*"
numpy = "*"
python_requires = >=3.6